<?xml version="1.0" encoding="utf-8" standalone="no"?>
<!--***************************************************************************
 *  DroidTV, live TV on Android devices with host USB port and a DVB tuner    *
 *  Copyright (C) 2012  Christian Ulrich <chrulri@gmail.com>                  *
 *                                                                            *
 *  This program is free software: you can redistribute it and/or modify      *
 *  it under the terms of the GNU General Public License as published by      *
 *  the Free Software Foundation, either version 3 of the License, or         *
 *  (at your option) any later version.                                       *
 *                                                                            *
 *  This program is distributed in the hope that it will be useful,           *
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of            *
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the             *
 *  GNU General Public License for more details.                              *
 *                                                                            *
 *  You should have received a copy of the GNU General Public License         *
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.     *
 ***************************************************************************-->
<resources>
    <string name="app_name">Droid TV</string>
    <string name="ok">Ok</string>
	<string name="version">0.1.0</string>
	<string name="quit">Quit</string>
	<string name="channels">Channels</string>
    <string name="settings">Settings</string>
	<string name="buffering">Buffering. Please wait…</string>
    <string name="error_unknown">Unknown error occured. ERR=%d</string>
	<string name="error_mediaplayer">MediaPlayer error: what=%1$d, extra=%2$d</string>
    <string name="error_no_channel_configuration">No channel configuration file loaded</string>
	<string name="error_invalid_channel_configuration">Invalid channel configuration</string>
	<string name="tuning">Tuning. Please wait…</string>
	<string name="choose_channel">Choose channel:</string>
	<string name="preftitle_playLastChannelOnStartup">Play last channel on app start</string>
	<string name="preftitle_general">General</string>
	<string name="preftitle_dvbType">DVB type</string>
	<string-array name="preftitles_dvbType">
        <item>ATSC</item>
        <!-- <item>DVB-C</item> -->
        <!-- <item>DVB-S</item> -->
        <item>DVB-T</item>
    </string-array>
    <string name="preftitle_channelConfigs">Channel Configurations</string>
    <string name="preferences_name">Preferences</string>
    <string name="channels_name">Channels</string>
    <string name="scan_name">Channel scanning</string>
    <string name="preftitle_scanChannels">Scan for channels</string>
	<string name="scan">Scan for channels</string>
	<string name="country">Country</string>
    <string name="atscType">ATSC type</string>
	<string name="report">OK</string>
	<string name="fileName">File name</string>
	<string name="check_device">Checking for DVB device access…</string>
	<string name="no_device">Sorry, no device found or device acces denied.
This application *NEEDS* a working DVB device, plugged into your Android device and set up with drivers, firmware and correct permissions.
Make sure that these prerequirements are met and try again.</string>
</resources>
